--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -139,7 +139,7 @@ p, li, a, small {
 
 .intro {
 	height:100vh;
-	background-image: url("../../img/background3.png");
+	background-image: url("../../img/background.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100%;
@@ -235,7 +235,7 @@ hr {
 }
 
 #contact {
-	background-image: url("../../img/background3.png");
+	background-image: url("../../img/background.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100%;
