--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -103,7 +103,12 @@ a:active, a:hover, .intro a:hover, .intro a:active {
 
 .intro {
 	height:100vh;
+	min-height: 750px;
     line-height: 80px;
+}
+
+.intro p {
+	padding-bottom: 2%;
 }
 
 p.nav-links, .intro a, .intro p {
@@ -115,6 +120,10 @@ p.nav-links, .intro a, .intro p {
     font-size: 18px;
 }
 
+.intro .block:before {
+	height: 10vh;
+}
+
 .section {
   	background: linear-gradient( 
   		to right, 
@@ -123,8 +132,8 @@ p.nav-links, .intro a, .intro p {
   		rgba(255,255,255,1) 50%, 
   		rgba(255,255,255,1) 100% 
   	);
-  	height: 500px;
   	height:100vh;
+  	min-height: 725px;
 }
 
 .section:nth-child(odd) {
@@ -153,16 +162,6 @@ p.nav-links, .intro a, .intro p {
 	padding-top: 10%;
 }
 
-.left-section, .right-section{
-	display: inline-block;
-	height: inherit;
-	vertical-align: top;
-}
-
-.left-section {
-	width: 49%;
-}
-
 .block {
   text-align: center;
   white-space: nowrap;
@@ -178,6 +177,16 @@ p.nav-links, .intro a, .intro p {
 
 .hidden {
 	display: none;
+}
+
+.left-section, .right-section{
+	display: inline-block;
+	height: inherit;
+	vertical-align: top;
+}
+
+.left-section {
+	width: 49%;
 }
 
 .left-section img {
@@ -262,4 +271,69 @@ footer p {
 	display: inline-block;
     vertical-align: middle;
     padding-right: 15px;
+}
+
+/** Responsive Styles **/
+
+@media screen and (max-width:641px) {
+	.intro {
+		min-height: 550px;
+	}
+	.intro img {
+		width: 55%;
+	}
+
+	p.nav-links, .intro a, .intro p {
+		font-size: 15px;
+		line-height: 25px;
+		letter-spacing: 3px;
+	}
+
+	.intro .block:before {
+		height: 5vh;
+	}
+
+	.right-section, .left-section {
+		width: 100%;
+		float: left;
+		height: 100vh;
+	}
+
+	.section, .section:nth-child(odd) {
+		background-image: url("../../img/leaves-faded-neutrals.jpg");
+		background-size: cover;
+		background-position: center center;
+		float: left;
+		height: initial;
+		min-height: initial;
+	}
+	.section .left-section {
+		background: linear-gradient( 
+	  		to right, 
+	  		rgba(23, 28, 33, 0.75) 0%, 
+ 			rgba(51, 63, 74, 0.95) 50%
+ 		);
+	}
+
+	#work .left-section {
+		background: linear-gradient( 
+	  		to right, 
+			rgba(255, 255, 255, 0.95) 0%, 
+			rgba(51, 63, 74, 0) 50%
+		);
+	}
+
+	.right-section {
+		background: white;
+		overflow: visible;
+		padding: 10%;
+	}
+
+	#work .right-section {
+		background: rgb(51, 63, 74);
+	}
+
+	.left-section {
+		padding: 10% 0;
+	}
 }
