--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -201,11 +201,14 @@ p.nav-links, .intro a, .intro p {
     -moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-    overflow: hidden;
-    overflow-y: scroll;
     text-align: left;
     line-height: 25px;
     font-size: 125%;
+}
+
+#about .right-section {
+	overflow: hidden;
+    overflow-y: scroll;
 }
 
 .right-section p, h3, ul, .portfolio-item .img-container {
