--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,54 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/********* End Reset *************/
-
 html, body {
 	height: 100%;
 	color: #333f4a;
@@ -63,27 +12,7 @@ body {
 	background-position: center center;
 }
 
-h1, h2, h3 {
-	font-weight: 800;
-}
-
-h1 {
-	font-size: 400%;
-}
-
-h2 {
-	font-size: 250%;
-}
-
-h3 {
-	font-size: 100%;
-}
-
-p, li, a {
-	font-size: 16px;
-}
-
-a {
+a, a:visited {
 	color: #FF549C;
 	text-decoration: none;
 	font-weight: 700;
@@ -97,16 +26,9 @@ a:active, a:hover, .intro a:hover, .intro a:active {
 	font-weight: 700;
 }
 
-.intro {
-    line-height: 80px;
-    -moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-	min-height: 750px;
-}
-
-.intro p {
-	padding-bottom: 2%;
+.intro img {
+	max-width: 85% !important;
+    height: auto;
 }
 
 p.nav-links, .intro a, .intro p {
@@ -118,74 +40,45 @@ p.nav-links, .intro a, .intro p {
     font-size: 18px;
 }
 
-.section {
-  	background: linear-gradient( 
-  		to right, 
-  		rgba(23, 28, 33, 0.75) 0%, 
-  		rgba(51, 63, 74, 0.95) 50%, 
-  		rgba(255,255,255,1) 50%, 
-  		rgba(255,255,255,1) 100% 
-  	);
-  	background-image: -webkit-linear-gradient(
-		left, 
-		rgba(23, 28, 33, 0.75) 0%, 
-  		rgba(51, 63, 74, 0.95) 50%, 
-  		rgba(255,255,255,1) 50%, 
-  		rgba(255,255,255,1) 100% 
-	);
-}
-
-.section:nth-child(odd) {
-    background: linear-gradient( 
-    	to right, 
-    	rgba(255, 255, 255, 0.95) 0%, 
-    	rgba(51, 63, 74, 0) 50%, 
-    	rgb(51, 63, 74) 50%, 
-    	rgb(51, 63, 74) 100% );
-    );
-
-	background-image: -webkit-linear-gradient(
-		left,
-		rgba(255, 255, 255, 0.95) 0%, 
-    	rgba(51, 63, 74, 0) 50%, 
-    	rgb(51, 63, 74) 50%, 
-    	rgb(51, 63, 74) 100% );
-    );
-}
-
-.section:nth-child(odd) .right-section p, .section:nth-child(odd) .right-section h3 {
-    color: white;
-}
-
-.section:nth-child(even) .left-section .nav-links, .section:nth-child(even) .left-section .nav-links a {
-	color: #FF549C;
-}
-
-.section:nth-child(even) .left-section .nav-links a:hover {
-	color: #D41968;
-}
-
 .section p.nav-links {
 	padding-top: 10%;
 }
 
-.hidden {
-	display: none;
-}
-
-.left-section, .right-section{
-	display: inline-block;
-	vertical-align: top;
-	width: 49%;
-    -moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-}
 
 .left-section img {
 	width: 50%;
 	vertical-align: middle;
 	display: inline-block;
+}
+
+#about .left-section, #contact .left-section {
+  	background: linear-gradient( 
+  		to right, 
+  		rgba(23, 28, 33, 0.75) 0%, 
+  		rgba(51, 63, 74, 0.95) 50%
+
+  	);
+  	background-image: -webkit-linear-gradient(
+		left, 
+		rgba(23, 28, 33, 0.75) 0%, 
+  		rgba(51, 63, 74, 0.95) 50% 
+
+	);
+}
+
+#work .left-section {
+    background: linear-gradient( 
+    	to right, 
+    	rgba(255, 255, 255, 0.95) 0%, 
+    	rgba(51, 63, 74, 0) 50%
+    );
+
+	background-image: -webkit-linear-gradient(
+		left,
+		rgba(255, 255, 255, 0.95) 0%, 
+    	rgba(51, 63, 74, 0) 50% 
+
+    );
 }
 
 .right-section {
@@ -195,35 +88,22 @@ p.nav-links, .intro a, .intro p {
     font-size: 125%;
 }
 
-#about .right-section {
-	overflow: hidden;
-    overflow-y: scroll;
-}
-
 .right-section p, h3, ul, .portfolio-item .img-container {
 	padding-bottom: 3%;
 }
 
-.experience {
-	padding: 5% 0;
+#about .right-section, #contact .right-section {
+	background-color: white;
 }
 
-.more-info {
-	padding: 2%;
+#work .right-section {
+	color: white;
+	background-color: #333f4a;
 }
 
 .skills-list {
 	list-style: square;
-	padding-left: 5%;
-}
-
-.skills-list div {
-	width: 20%;
-    display: inline-block;
-}
-
-.portfolio-item {
-	width: 100%;
+	padding-left: 10%;
 }
 
 .portfolio-item .img-container img {
@@ -252,7 +132,7 @@ p.nav-links, .intro a, .intro p {
 }
 
 .social img {
-	width: 10%;
+	height: 35px;
 }
 
 footer {
@@ -267,70 +147,34 @@ footer p {
 }
 
 /** Responsive Styles **/
-
-@media screen and (max-width:641px) {
+@media screen and (max-width:600px) and (max-height:360px) {
 	.intro {
-		min-height: 550px;
-	}
-	.intro img {
-		width: 55%;
+		line-height: 45px;
 	}
 
+	.intro img {
+		width: 30%;
+	}
+}
+
+@media screen and (max-width:670px) and (max-height:400px) {
+	.intro {
+		line-height: 45px;
+	}
+
+	.intro img {
+		width: 30%;
+	}
+}
+
+@media screen and (max-width:641px) and (min-height: 360px)  {
 	p.nav-links, .intro a, .intro p {
 		font-size: 15px;
 		line-height: 25px;
 		letter-spacing: 3px;
 	}
 
-	.right-section, .left-section {
-		width: 100%;
-		float: left;
-	}
-
-	.section, .section:nth-child(odd) {
-		background-image: url("../../img/leaves-faded-neutrals.jpg");
-		background-size: cover;
-		background-position: center center;
-		float: left;
-	}
-
-	.section .left-section {
-		background: linear-gradient( 
-	  		to right, 
-	  		rgba(23, 28, 33, 0.75) 0%, 
- 			rgba(51, 63, 74, 0.95) 50%
- 		);
- 		background-image: -webkit-linear-gradient(
- 			left, rgba(23, 28, 33, 0.75) 0%, 
- 			rgba(51, 63, 74, 0.95) 50%
- 		);
-	}
-
-	#work .left-section {
-		background: linear-gradient( 
-	  		to right, 
-			rgba(255, 255, 255, 0.95) 0%, 
-			rgba(51, 63, 74, 0) 50%
-		);
-
-		background-image: -webkit-linear-gradient(
- 			left, 
-			rgba(255, 255, 255, 0.95) 0%, 
-			rgba(51, 63, 74, 0) 50%
- 		);
-	}
-
 	.right-section {
-		background: white;
-		overflow: visible;
 		padding: 10%;
-	}
-
-	#work .right-section {
-		background: rgb(51, 63, 74);
-	}
-
-	.left-section {
-		padding: 10% 0;
 	}
 }
