Add image and tweak bio.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -51,6 +51,10 @@ p.nav-links, .intro a, .intro p {
 	display: inline-block;
 }
 
+.contact-me {
+	padding: 3% 0;
+}
+
 #about .left-section, #contact .left-section {
   	background: linear-gradient( 
   		to right, 
@@ -88,12 +92,22 @@ p.nav-links, .intro a, .intro p {
     font-size: 125%;
 }
 
-.right-section p, h3, ul, .portfolio-item .img-container {
-	padding-bottom: 3%;
+.img-container {
+	padding-bottom: 5%;
 }
 
 #about .right-section, #contact .right-section {
 	background-color: white;
+}
+
+#about .right-section .img-container {
+	text-align: center;
+}
+
+#about .right-section img {
+	width: 300px;
+	max-width: 75%;
+    border-radius: 50%;
 }
 
 #work .right-section {
