--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -93,7 +93,7 @@ p.nav-links, .intro a, .intro p {
 }
 
 .img-container {
-	padding-bottom: 5%;
+	padding: 1% 0 3%
 }
 
 #about .right-section, #contact .right-section {
